--- a/web/src/main/webapp/krad/css/ks/ks-theme.css
+++ b/web/src/main/webapp/krad/css/ks/ks-theme.css
@@ -30,6 +30,10 @@ input[type="text"], textarea {
     font-family: arial, helvetica, sans-serif;
 
 }
+input[disabled="disabled"], textarea[disabled="disabled"]  {
+     background-color:#dddddd;
+    color:#999;
+}
 
 input[type="radio"], input[type="checkbox"] {
     margin:5px 5px 5px 0;
@@ -43,7 +47,9 @@ input:focus, textarea:focus {
 }
 select[multiple="multiple"] option {
     padding: .25em 1em;
+    line-height: 1em;
 }
+
 select[multiple="multiple"] option:hover {
     background: none repeat scroll 0 0 #ECFCEB;
 }
@@ -67,6 +73,7 @@ h4 {
     font-size: 1.15384615em !important;    /* 15px */
     /*font-weight:normal;            this was font-weight normal in legacy versions... probably don't need it to be */
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 4px;
 }
 h5 {
 	font-size: 1.07692308em !important; /* 14px */
@@ -144,7 +151,9 @@ th .kr-collection-cntr .summary {
 }
 /* breadcrumbs */
 
-
+.kr-breadcrumbs {
+    padding-left: 15px;
+}
 
 
  .kr-breadcrumbs span {  /* was .breadcrumbs span*/ /* renamed in xml and/or jsp */
@@ -179,7 +188,7 @@ th.labelTop span.labelTop {
     font-weight:bold;
 }
 .kr-field-attribute>span:nth-child(1) label {
-    margin-right:1em;
+    margin-right:.3em;
 }
 
 h1.kr-header-object-title {			/* was h1.header-object-title*/  /* NOT FOUND in xml and/or jsp */
@@ -260,7 +269,7 @@ h5.kr-header-page-subhead {		/* was h5.header-page-subhead*/ /* NOT FOUND in xml
    text-shadow: 0px 1px 0px #83d485;
    filter: dropshadow(color=#83d485, offX=0, offY=1);
    }
-button.kr-button-primary[disabled="true"] {
+button.kr-button-primary[disabled="true"], button.kr-button-primary[disabled="disabled"] {
 		background-color:#C8EABC;
 		border: 1px solid #abdea5;
 		color:#7FA393;
@@ -284,25 +293,8 @@ button.kr-button-primary[disabled="true"] {
 		}	 
 
 
-.kr-button-secondary1{				/* was .button-secondary1 */ /* renamed in xml and/or jsp */
-	border: 1px solid #62D255;
-	/*defines gradient background*/
-	background-image: -moz-linear-gradient(top, #99DE80, #62D255);
-	background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #99DE80), color-stop(1, #62D255));
-    background-image: -o-linear-gradient(top,rgba(153,222,128,1),rgba(98,210,85,1)); /* be nice to Opera */
-	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr=#99DE80, endColorStr=#62D255 GradientType=0); /* IE 7 or earlier */
-    -ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorStr=#99DE80, endColorStr=#62D255, GradientType=0); /* IE 8 */
-	background-image: linear-gradient(top, rgba(153,222,128,1) 0%, rgba(98,210,85,1) 100%); /* for the future */
-	background-color:#73C561;
-	color: #2A2A2A;
-	font-weight: normal;
-	font-size:0.92307692em;    /* 12px divided by 13px */
-	text-shadow: 0px 1px 0px #83d485;
-	filter: dropshadow(color=#83d485, offX=0, offY=1);
-    border-radius:4px;
-}
 
-.kr-button-secondary2, .fg-button.button-secondary1 {				/* was .button-secondary2 */ /* NOT FOUND in xml and/or jsp */
+.kr-button-secondary1, .kr-button-secondary2, .fg-button.button-secondary1 {				/* was .button-secondary2 */ /* NOT FOUND in xml and/or jsp */
 	border:1px solid #3F7826;
 	background: #ffffff; /* Old browsers */
 
@@ -332,7 +324,7 @@ button.kr-button-primary[disabled="true"] {
 }
 
 
-.kr-button-secondary2:hover, .fg-button.button-secondary1:hover, { /* was .button-secondary2:hover */ /* NOT FOUND in xml and/or jsp */
+.kr-button-secondary1:hover, .kr-button-secondary2:hover, .fg-button.button-secondary1:hover { /* was .button-secondary2:hover */ /* NOT FOUND in xml and/or jsp */
     background: rgb(153,153,153);
 	background: #999999; /* Old browsers */
 
@@ -359,7 +351,7 @@ button.kr-button-primary[disabled="true"] {
 	color: #eeeeee;
 }
 
-.kr-button-primary:hover, .button-primary:hover, .kr-button-secondary1:hover {		/* was .button-primary:hover, .button-secondary1:hover */ /* renamed in xml and/or jsp */
+.kr-button-primary:hover, .button-primary:hover {		/* was .button-primary:hover, .button-secondary1:hover */ /* renamed in xml and/or jsp */
 	border-color:#07662a;
 	/*defines gradient background*/
 	background: #07662a; /* Old browsers */
@@ -484,6 +476,9 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 
 
 /* Jquery Tab Styles */
+.navigation-block {
+    width:210px;
+}
 .tab-navigation-block, .tab-navigation-block li {
 	border-bottom: 1px solid #C7C7C7;
 }
@@ -742,7 +737,7 @@ img.expand_collapse-buttons[alt="expand"]{
 }
 
 #viewheader_div {			/* was #viewheader_div - I'm not sure this should be changed */ /* NOT renamed in xml and/or jsp, even though there's no impact on js functionality   */
-	margin: 10px 15px 30px 20px;
+	margin: 10px 15px 30px 15px;
 }
 .desc > label {
     line-height:2em;
@@ -1023,6 +1018,7 @@ ul.animated-navigation {
 	list-style: none outside none;
 	padding: 0;
 	margin-top: 0px;
+    margin-left:15px;
 }
 ul.animated-navigation li {
 	padding: 0;
@@ -1172,9 +1168,7 @@ ul.animated-navigation li.animated-element a.current, ul.animated-navigation li.
 .group_header a h4.kr-section-subhead,
 .grouping-header-expandable a h3.kr-page-section-title,
 a.h4.kr-section-subhead {
-    border: 1px solid rgba(255,255,255,0);
     padding: .25em .25em .25em 0;
-    margin-bottom:.5em;
     margin-top:0;
 }
 
@@ -1184,15 +1178,14 @@ a.h4.kr-section-subhead {
 .group_header a h4.kr-section-subhead:hover,
 .grouping-header-expandable a h3.kr-page-section-title:hover {
     background-color:#ECFCE8;
-    border: 1px solid #3F7826;
     text-decoration:none;
 }
 
 /* messing with collections */
 
 .kr-collectionStacked a h3.kr-collectionGroup-header:hover{
-    background-color:#666;
-    border: 1px solid #eee;
+    background-color:#ECFCE8;
+    color: #07662a
 }
 .kr-collectionStacked h3.kr-collectionGroup-header {
     color:#fff;
@@ -1204,8 +1197,14 @@ a.h4.kr-section-subhead {
 .kr-collectionStacked h3.kr-collectionGroup-header img.expand_collapse-buttons[alt="expand"] {
     background: url("../../images/h3_expand-back-white-ks.png") no-repeat scroll 0 0 transparent;
 }
+.kr-collectionStacked h3.kr-collectionGroup-header:hover img.expand_collapse-buttons[alt="expand"] {
+    background: url("../../images/h3_expand-back-ks.png") no-repeat scroll 0 0 transparent;
+}
 .kr-collectionStacked h3.kr-collectionGroup-header img.expand_collapse-buttons[alt="collapse"] {
     background: url("../../images/h3_collapse-back-white-ks.png") no-repeat scroll 0 0 transparent;
+}
+.kr-collectionStacked h3.kr-collectionGroup-header:hover img.expand_collapse-buttons[alt="collapse"] {
+    background: url("../../images/h3_collapse-back-ks.png") no-repeat scroll 0 0 transparent;
 }
 .kr-collection-cntr.kr-collectionStacked{
     background: url(../../images/pattern_dotted.png) repeat;
@@ -1213,7 +1212,6 @@ a.h4.kr-section-subhead {
 }
 .kr-collection-item.kr-addLine h4.kr-section-subhead.kr-collection-item-header{
     padding:0.25em 0.5em;
-    background-color:#ccc;
     border-bottom: 1px solid #ccc;
 }
 .kr-collection-item.kr-addLine>div:nth-child(2) {
